--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  padding:20px 40px;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: 30vmin;
+  pointer-events: none;;
+}
+.App-header{
+  text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,21 +19,20 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
-
+.listHeader{
+  color:#cf2308;
+}
+.innerDetail{
+  display: inline-block;
+  padding-bottom:10px;
+  padding-right:30px;
+}
+.innerDetail>label{
+  padding-right: 8px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
